--- a/Project1/web-server/templates/views/index1.hbs
+++ b/Project1/web-server/templates/views/index1.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
         {{>header}}
         <p>Use this website to get your weather!</p>
-        <form>
+        <form action="post">
             <input placeholder="City Name" id="cityName">
            
             <br> <br>
